@@ -37,7 +37,9 @@ add_library("${RW_LIB_TARGET_NAME}" STATIC
     "core/BaseApplication.cpp"
     "core/BaseObject.cpp"
     "dat/LogMsg.cpp"
+    "dat/SettingsNode.cpp"
     "io/File.cpp"
+    "text/string_utils.cpp"
     "thread/ThreadPool.cpp"
     "time/DateTime.cpp"
     "time/Timer.cpp"
