@@ -4,7 +4,8 @@
 
 namespace rw::io
 {
-   File::File(std::string_view filePath, Format format) : logger_{ rw::utils::Logger::instance() }, path_{ filePath }, format_{ format }
+   File::File(std::string_view filePath, OpenMode mode, Format format) :
+      logger_{ rw::utils::Logger::instance() }, path_{ filePath }, format_{ format }
    {
       if (std::filesystem::exists(path_) && std::filesystem::is_directory(path_))
       {
@@ -13,6 +14,63 @@ namespace rw::io
       }
 
       if (format == Format::unknown) computeFormat_();
+
+      // Check whether the file is in a binary or text format.
+      bool binary{ false };
+      switch (format_)
+      {
+      case Format::bin:
+      case Format::bmp:
+      case Format::cab:
+      case Format::dll:
+      case Format::exe:
+      case Format::jpg:
+      case Format::msi:
+      case Format::png:
+      case Format::zip:
+         binary = true;
+         break;
+      case Format::ini:
+      case Format::sh:
+      case Format::txt:
+      case Format::xml:
+         binary = false;
+         break;
+      }
+
+      switch (mode)
+      {
+      case OpenMode::append:
+         if (binary)
+         {
+            fileStream_ = std::fstream(filePath.data(), std::ios_base::app | std::ios_base::binary);
+         }
+         else
+         {
+            fileStream_ = std::fstream(filePath.data(), std::ios_base::app);
+         }
+         break;
+      case OpenMode::read:
+         if (binary)
+         {
+            fileStream_ = std::fstream(filePath.data(), std::ios_base::in | std::ios_base::binary);
+         }
+         else
+         {
+            fileStream_ = std::fstream(filePath.data(), std::ios_base::in);
+         }
+         break;
+      case OpenMode::write:
+         if (binary)
+         {
+            fileStream_ = std::fstream(filePath.data(), std::ios_base::out | std::ios_base::binary);
+         }
+         else
+         {
+            fileStream_ = std::fstream(filePath.data(), std::ios_base::out);
+         }
+         break;
+      }
    }
 
    std::string File::extension() const
@@ -23,6 +81,11 @@ namespace rw::io
    File::Format File::format() const
    {
       return format_;
+   }
+
+   std::filesystem::path File::path() const
+   {
+      return path_;
    }
 
    std::string File::readAll() const
@@ -46,6 +109,17 @@ namespace rw::io
       }
       out.append(buf, 0, f.gcount());
       return out;
+   }
+
+   std::optional<std::string> File::readline()
+   {
+      std::string retVal;
+      if (std::getline(fileStream_, retVal))
+      {
+         return retVal;
+      }
+
+      return std::optional<std::string>();
    }
 
    void File::computeFormat_()
